# ubot-ctrl

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  bootstrap.sh  memory.x  stm32f407.cfg  stm32f407_gcc.cmake
.cargo/: config
ctrl-sample/: README  main.py
ctrl-sample/energia_u2s/: energia_u2s.ino
ctrl-sample/pyBusPirateLite/: BitBang.py  SPI.py
hidapi_example/: lst.py  one.py  try.py
hw/: stm32f407_gcc.c  stm32f407_gcc.ld  stm32f4_discovery.h  stm32f4xx_hal_conf.h  sys.h  usb_bsp.c  usb_conf.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_cdc_vcp.c  usbd_cdc_vcp.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/: .main.cpp.swp  app.h  app_conf.h  cdc_if.c  control.cc  control.h  crc8.cc  crc8.h  ctrl_fsm.cc  ctrl_fsm.h  enc.cc  enc.h  eventloop.cc  eventloop.h  hid_if.cc  hid_if.h  itm.c  itm.h  main.cc  main.cpp  main.rs  motor_defs.h  pwm.cc  pwm.h  qei.h  qei_api.h  spislave_ext.cc  spislave_ext.h  usbif.cc  usbif.h  wheel.cc  wheel.h
