[package]
name = "uctrl"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK

