[package]
name = "uctrl"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "defmt-default" ]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
defmt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch = "main" } # instead of rtt-target = { version = "0.2.2", features = ["cortex-m"] }
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f407"] }

[profile.dev]
debug = 2 # default is `true`; not needed if not already overridden

[profile.release]
debug = 2 # default is `false`; using `true` is also OK
